--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.20.0",
+  "version": "2.21.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,23 +10,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/localize": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/pwa": "^17.3.7",
-    "@angular/router": "^17.3.9",
-    "@angular/service-worker": "^17.3.9",
+    "@angular/animations": "^18.2.3",
+    "@angular/cdk": "^18.2.2",
+    "@angular/common": "^18.2.3",
+    "@angular/compiler": "^18.2.3",
+    "@angular/core": "^18.2.3",
+    "@angular/forms": "^18.2.3",
+    "@angular/localize": "^18.2.3",
+    "@angular/platform-browser": "^18.2.3",
+    "@angular/platform-browser-dynamic": "^18.2.3",
+    "@angular/pwa": "^18.2.2",
+    "@angular/router": "^18.2.3",
+    "@angular/service-worker": "^18.2.3",
     "@auth0/angular-jwt": "^5.2.0",
     "@datorama/akita": "^8.0.1",
     "@datorama/akita-ng-entity-service": "^8.0.0",
     "@datorama/akita-ng-router-store": "^8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@ngneat/transloco": "^6.0.4",
     "@ngneat/transloco-locale": "^5.1.2",
     "@ngneat/transloco-persist-lang": "^5.0.0",
@@ -35,29 +35,29 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cookieconsent": "^3.1.1",
-    "ng-recaptcha": "^13.2.1",
+    "ng-recaptcha-2": "^14.0.0",
     "ngx-cookieconsent": "^6.0.0",
     "ngx-google-analytics": "^14.0.1",
-    "ngx-infinite-scroll": "^17.0.0",
+    "ngx-infinite-scroll": "^18.0.0",
     "ngx-skeleton-loader": "^9.0.0",
-    "ngx-slider-v2": "^17.0.0",
+    "@angular-slider/ngx-slider": "^18.0.0",
     "rxjs": "^7.8.1",
     "tslib": "2.4.1",
-    "zone.js": "^0.14.6"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.9",
+    "@angular-devkit/build-angular": "^18.2.2",
+    "@angular/cli": "^18.2.2",
+    "@angular/compiler-cli": "^18.2.3",
     "@datorama/akita-ngdevtools": "^7.0.0",
     "@types/jasmine": "^5.1.4",
-    "@types/node": "^20.12.12",
-    "jasmine-core": "^5.1.2",
-    "karma": "^6.4.3",
+    "@types/node": "^22.5.3",
+    "jasmine-core": "^5.2.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   }
 }
