Add statistics feature with charts and routes; update version to 2.26.0 and changelog for new functionality

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.25.1",
+  "version": "2.26.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -36,8 +36,10 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.4",
     "cookieconsent": "^3.1.1",
     "ng-recaptcha-2": "^14.0.0",
+    "ng2-charts": "^6.0.1",
     "ngx-cookieconsent": "^6.0.0",
     "ngx-google-analytics": "^14.0.1",
     "ngx-infinite-scroll": "^18.0.0",
@@ -53,7 +55,7 @@
     "@datorama/akita-ngdevtools": "^7.0.0",
     "@types/jasmine": "^5.1.4",
     "@types/node": "^22.7.5",
-    "jasmine-core": "^5.3.0",
+    "jasmine-core": "^5.4.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
