--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": "77d7b52f-9e51-4a6f-b57f-2f90163ebb55",
-    "schematicCollections": ["@datorama/akita"]
+    "schematicCollections": [
+      "@datorama/akita"
+    ]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -24,6 +26,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "sourceMap": true,
             "outputPath": "dist/vtesDecksFront",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -111,7 +114,9 @@
               "src/robots.txt",
               "src/manifest.webmanifest"
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         }
