--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,3 +19,13 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+    - name: Create Sentry release
+      uses: getsentry/action-release@v1
+      env:
+        SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+        SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+      with:
+        environment: production
+        inject: true
+        sourcemaps: "./dist/vtesDecksFront"
