--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,6 +20,7 @@ jobs:
     - run: npm ci
     - run: npm run build
     - name: Create Sentry release
+      if: github.event_name != 'pull_request'
       uses: getsentry/action-release@v1
       env:
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
