--- a/angular.json
+++ b/angular.json
@@ -2,9 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": "77d7b52f-9e51-4a6f-b57f-2f90163ebb55",
-    "schematicCollections": [
-      "@datorama/akita"
-    ]
+    "schematicCollections": []
   },
   "version": 1,
   "newProjectRoot": "projects",
