--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.31.0",
+  "version": "2.32.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,55 +12,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^18.0.0",
-    "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^18.2.14",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/localize": "^18.2.13",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/pwa": "^18.2.12",
-    "@angular/router": "^18.2.13",
-    "@angular/service-worker": "^18.2.13",
+    "@angular-slider/ngx-slider": "^19.0.0",
+    "@angular/animations": "^19.2.6",
+    "@angular/cdk": "^19.2.9",
+    "@angular/common": "^19.2.6",
+    "@angular/compiler": "^19.2.6",
+    "@angular/core": "^19.2.6",
+    "@angular/forms": "^19.2.6",
+    "@angular/localize": "^19.2.6",
+    "@angular/platform-browser": "^19.2.6",
+    "@angular/platform-browser-dynamic": "^19.2.6",
+    "@angular/pwa": "^19.2.7",
+    "@angular/router": "^19.2.6",
+    "@angular/service-worker": "^19.2.6",
     "@auth0/angular-jwt": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
-    "@ngneat/transloco": "^6.0.4",
-    "@ngneat/transloco-locale": "^5.1.2",
-    "@ngneat/transloco-persist-lang": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@jsverse/transloco": "^7.6.1",
+    "@jsverse/transloco-locale": "^7.0.1",
+    "@jsverse/transloco-persist-lang": "^7.0.2",
     "@ngneat/until-destroy": "^10.0.0",
     "@popperjs/core": "^2.11.8",
-    "@sentry/angular": "^8.50.0",
-    "@sentry/cli": "^2.41.1",
-    "bootstrap": "^5.3.3",
+    "@sentry/angular": "^9.12.0",
+    "@sentry/cli": "^2.43.0",
+    "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
     "cookieconsent": "^3.1.1",
-    "ng-recaptcha-2": "^14.0.0",
-    "ng2-charts": "^6.0.1",
-    "ngx-cookieconsent": "^6.0.0",
+    "ng-recaptcha-2": "^15.0.3",
+    "ng2-charts": "^8.0.0",
+    "ngx-cookieconsent": "^8.0.0",
     "ngx-google-analytics": "^14.0.1",
-    "ngx-infinite-scroll": "^18.0.0",
-    "ngx-skeleton-loader": "^9.0.0",
-    "rxjs": "^7.8.1",
-    "tslib": "2.4.1",
-    "zone.js": "^0.14.10"
+    "ngx-infinite-scroll": "^19.0.0",
+    "ngx-skeleton-loader": "^11.0.0",
+    "rxjs": "^7.8.2",
+    "tslib": "2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.12",
-    "@angular/cli": "^18.2.12",
-    "@angular/compiler-cli": "^18.2.13",
-    "@types/jasmine": "^5.1.5",
-    "@types/node": "^22.10.5",
-    "jasmine-core": "^5.5.0",
+    "@angular-devkit/build-angular": "^19.2.7",
+    "@angular/cli": "^19.2.7",
+    "@angular/compiler-cli": "^19.2.6",
+    "@types/jasmine": "^5.1.7",
+    "@types/node": "^22.14.1",
+    "jasmine-core": "^5.6.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "prettier": "^3.4.2",
-    "typescript": "^5.5.4"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   }
 }
