--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom",
+      "ES2021.String"
+    ],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
