--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "ngx-infinite-scroll": "^19.0.0",
     "ngx-markdown": "^19.1.1",
     "ngx-skeleton-loader": "^11.0.0",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "^7.8.2",
+    "tesseract.js": "^6.0.1",
     "tslib": "2.8.1",
     "zone.js": "~0.15.0"
   },
