--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.41.3",
+  "version": "2.42.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -38,6 +38,7 @@
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "cookieconsent": "^3.1.1",
+    "emoji-toolkit": "^9.0.0",
     "marked": "^15.0.12",
     "ng-recaptcha-2": "^15.0.3",
     "ng2-charts": "^8.0.0",
@@ -46,6 +47,7 @@
     "ngx-infinite-scroll": "^19.0.0",
     "ngx-markdown": "^19.1.1",
     "ngx-skeleton-loader": "^11.1.0",
+    "prismjs": "^1.30.0",
     "rxjs": "^7.8.2",
     "tslib": "2.8.1",
     "zone.js": "~0.15.1"
