--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.42.2",
+  "version": "2.42.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org francisco-javier-ortiz-quetgla --project vtesdecks ./dist/vtesDecksFront && sentry-cli sourcemaps upload --org francisco-javier-ortiz-quetgla --project vtesdecks ./dist/vtesDecksFront"
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org francisco-javier-ortiz-quetgla --project vtesdecks ./dist/vtesDecksFront && sentry-cli sourcemaps upload --org francisco-javier-ortiz-quetgla --project vtesdecks ./dist/vtesDecksFront",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,7 @@
     "@angular/localize": "^19.2.14",
     "@angular/platform-browser": "^19.2.14",
     "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/pwa": "^19.2.14",
+    "@angular/pwa": "^19.2.15",
     "@angular/router": "^19.2.14",
     "@angular/service-worker": "^19.2.14",
     "@auth0/angular-jwt": "^5.2.0",
@@ -32,7 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngneat/until-destroy": "^10.0.0",
     "@popperjs/core": "^2.11.8",
-    "@sentry/angular": "^9.26.0",
+    "@sentry/angular": "^9.29.0",
     "@sentry/cli": "^2.46.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
@@ -53,18 +54,21 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.14",
-    "@angular/cli": "^19.2.14",
+    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.14",
     "@types/jasmine": "^5.1.8",
-    "@types/node": "^22.15.21",
-    "jasmine-core": "^5.7.1",
+    "@types/node": "^24.0.1",
+    "angular-eslint": "20.0.0",
+    "eslint": "^9.28.0",
+    "jasmine-core": "^5.8.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "8.33.1"
   }
 }
