Add markdown card to descriptions/comments

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.42.3",
+  "version": "2.43.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,6 +22,7 @@
     "@angular/common": "^19.2.14",
     "@angular/compiler": "^19.2.14",
     "@angular/core": "^19.2.14",
+    "@angular/elements": "^19.2.14",
     "@angular/forms": "^19.2.14",
     "@angular/localize": "^19.2.14",
     "@angular/platform-browser": "^19.2.14",
@@ -72,7 +73,7 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "8.33.1",
+    "typescript-eslint": "8.34.0",
     "wrangler": "^4.20.0"
   }
 }
