--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^19.0.0",
-    "@angular/animations": "^19.2.14",
-    "@angular/cdk": "^19.2.18",
-    "@angular/common": "^19.2.14",
-    "@angular/compiler": "^19.2.14",
-    "@angular/core": "^19.2.14",
-    "@angular/elements": "^19.2.14",
-    "@angular/forms": "^19.2.14",
-    "@angular/localize": "^19.2.14",
-    "@angular/platform-browser": "^19.2.14",
-    "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/pwa": "^19.2.15",
-    "@angular/router": "^19.2.14",
-    "@angular/service-worker": "^19.2.14",
+    "@angular/animations": "^20.0.4",
+    "@angular/cdk": "^20.0.3",
+    "@angular/common": "^20.0.4",
+    "@angular/compiler": "^20.0.4",
+    "@angular/core": "^20.0.4",
+    "@angular/elements": "^20.0.4",
+    "@angular/forms": "^20.0.4",
+    "@angular/localize": "^20.0.4",
+    "@angular/platform-browser": "^20.0.4",
+    "@angular/platform-browser-dynamic": "^20.0.4",
+    "@angular/pwa": "^20.0.3",
+    "@angular/router": "^20.0.4",
+    "@angular/service-worker": "^20.0.4",
     "@auth0/angular-jwt": "^5.2.0",
     "@jsverse/transloco": "^7.6.1",
     "@jsverse/transloco-locale": "^7.0.1",
@@ -58,12 +58,12 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
-    "@angular/cli": "^19.2.15",
-    "@angular/compiler-cli": "^19.2.14",
+    "@angular/build": "^20.0.3",
+    "@angular/cli": "^20.0.3",
+    "@angular/compiler-cli": "^20.0.4",
     "@types/jasmine": "^5.1.8",
     "@types/node": "^24.0.1",
-    "angular-eslint": "20.0.0",
+    "angular-eslint": "20.1.1",
     "eslint": "^9.28.0",
     "jasmine-core": "^5.8.0",
     "karma": "^6.4.4",
