--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,15 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
     "module": "es2020",
-    "lib": ["es2020", "dom", "ES2021.String"],
+    "lib": [
+      "es2020",
+      "dom",
+      "ES2021.String"
+    ],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
