chore: update package version to 2.49.1 and modify dependencies in package-lock.json; add path mapping for chart.js in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
       "dom",
       "ES2021.String"
     ],
+    "paths": {
+      "chart.js/dist/types/utils": [
+        "node_modules/chart.js/dist/types/utils.d.ts"
+      ]
+    },
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
