--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.52.0",
+  "version": "2.53.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -45,6 +45,7 @@
     "cookieconsent": "^3.1.1",
     "emoji-toolkit": "^9.0.1",
     "marked": "^16.4.1",
+    "ng-lazyload-image": "^9.1.3",
     "ng-recaptcha-2": "^16.0.1",
     "ng2-charts": "^8.0.0",
     "ngx-cookieconsent": "^8.0.0",
