refactor: update import paths to use centralized models index

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
     "paths": {
       "chart.js/dist/types/utils": [
         "node_modules/chart.js/dist/types/utils.d.ts"
-      ]
+      ],
+      "@models": [
+        "src/app/models/index.ts"
+      ],
     },
     "useDefineForClassFields": false
   },
