feat(advent): implement Advent 2025 feature with deck challenges

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,9 @@
       ],
       "@state/*": [
         "src/app/state/*"
+      ],
+      "@advent/*": [
+        "src/app/modules/advent/*"
       ]
     },
     "useDefineForClassFields": false
