--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vtes-decks-front",
-  "version": "2.56.0",
+  "version": "2.57.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -56,6 +56,7 @@
     "prismjs": "^1.30.0",
     "rxjs": "^7.8.2",
     "tslib": "2.8.1",
+    "vanilla-tilt": "^1.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
