--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prismjs": "^1.30.0",
     "rxjs": "^7.8.2",
     "tslib": "2.8.1",
+    "uuid": "^13.0.0",
     "vanilla-tilt": "^1.8.1",
     "zone.js": "~0.15.1"
   },
